--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "node-cron": "^3.0.3",
     "node-fetch": "^2.7.0",
     "node-html-parser": "^6.1.13"
